openshift/old/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift2
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: back
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: back
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift2
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: back
    spec:
      containers:
      - env:
        - name: DEFAULT_USER_TYPE
          value: Editor
        - name: DISABLE_SEC
          value: "true"
        - name: IIP_PATH
          value: http://ca-iip:8080/fcgi-bin/iipsrv.fcgi
        - name: JWK_URL
          value: https://www.googleapis.com/oauth2/v3/certs
        - name: MONGO_URI
          value: mongodb://ca-mongo
        image: docker-registry.default.svc:5000/build-test/back:latest
        imagePullPolicy: ""
        name: ca-security
        ports:
        - containerPort: 4010
        resources: {}
        volumeMounts:
        - mountPath: /root/src/keys/
          name: keys
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: keys
        persistentVolumeClaim:
          claimName: keys
status: {}
